fix buttons alignment and change colors

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,7 @@
 .app {
     font-family: "Roboto", sans-serif;
     height: 100vh;
-    background-color: white;
+    background-color: #f3d887;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
