--- a/src/components/Calculator/calculator.scss
+++ b/src/components/Calculator/calculator.scss
@@ -1,21 +1,23 @@
 .calculator {
     width: 30vw;
     height: 75vh;
-    background-color: #86A69A;
+    background-color: #42464d;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 30px;
 
     .top{
         flex: 0.3;
-        background-color: #038C7F;
+        background-color: #BF7E04;
+        border-radius: 10px;
     }
     .bottom{
         flex: 0.7;
         display: flex;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
     }
 }
