--- a/src/components/Display/display.scss
+++ b/src/components/Display/display.scss
@@ -1,5 +1,9 @@
 .display{
-    background-color: #038C7F;
+    background-color: inherit;
     word-wrap: break-word;
-    height: 20px;
+    height: 30px;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    
 }
